--- a/myGithubJenkins_01_2019_3_24/Jenkinsfile
+++ b/myGithubJenkins_01_2019_3_24/Jenkinsfile
@@ -1,9 +1,21 @@
+#!groovy
 pipeline {
     agent any
+
     stages {
-        stage('Example') {
+        stage('Build') {
             steps {
-                echo "sssss...."
+                echo 'Building..'
+            }
+        }
+        stage('Test') {
+            steps {
+                echo 'Testing..'
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo 'Deploying....'
             }
         }
     }
